--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -1,5 +1,8 @@
 <div class="col-xs-10 col-xs-offset-2">
   <div class="col-xs-10">
+    <div class="alert success">
+      <%= flash[:success] %>
+    </div>
     <h4 class="admin-users">ユーザー一覧</h4>
     <%= render 'index', end_users: @end_users %>
   </div>
