--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -1,4 +1,7 @@
 <div class="col-xs-7 col-xs-offset-1">
+  <div class="alert success">
+    <%= flash[:success] %>
+  </div>
   <main class="main jscroll jscroll-select">
   <% unless @public_posts.empty? %>
     <% @public_posts.each do |public_post| %>
