--- a/app/views/end_user/chats/create.js.erb
+++ b/app/views/end_user/chats/create.js.erb
@@ -1,5 +1,5 @@
 <% unless @chat.errors.any? %>
-  $('.message').append("<td class='text-right message-right'><p class='message-box-right' style='text-align: right; font-weight: normal;'><%= @chat.message %></p></td>");
+  $('.message').append("<td class='message-right'><p class='message-box-right' style='text-align: left; font-weight: normal;'><%= @chat.message %></p></td>");
 <% end %>
 $("#error_explanation").html("<%= j(render 'layouts/error', { model: @chat }) %>");
 $('input[type=text]').val("")
