--- a/app/views/end_user/homes/top.html.erb
+++ b/app/views/end_user/homes/top.html.erb
@@ -46,10 +46,163 @@
       楽しいDIYライフを共有しよう！
     </h6>
   </div>
-  <div class="about-main_item"></div>
-  <div class="about-main_item"></div>
-  <div class="about-main_item"></div>
-  <div class="about-main_item"></div>
-  <div class="about-main_item"></div>
-  <div class="about-main_item"></div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">作品を投稿しよう!</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <div class="item-left-img-1"></div>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            作品にタイトルを付けて投稿しよう！<br>
+            投稿には細かい工程や、材料などを記述しよう！<br>
+            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+          </p>
+          <p class="item-detail-foot">
+            友達や上級者の投稿した作品を参考にしよう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">友達を作ろう!</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <div class="fas fa-people-arrows top-item-logo"></div>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            気になるユーザーや親交を深めたいユーザーをフォローしよう！<br>
+            相互フォローの友達はマイページから確認しよう！
+          </p>
+          <p class="item-detail-foot">
+            フォロー申請が来たら確認して、フォローを返そう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">DMで交流しよう!</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <div class="item-left-img-1"></div>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            作品にタイトルを付けて投稿しよう！<br>
+            投稿には細かい工程や、材料などを記述しよう！<br>
+            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+          </p>
+          <p class="item-detail-foot">
+            友達や上級者の投稿した作品を参考にしよう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">怪しいユーザーがいたら...</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <div class="item-left-img-1"></div>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            作品にタイトルを付けて投稿しよう！<br>
+            投稿には細かい工程や、材料などを記述しよう！<br>
+            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+          </p>
+          <p class="item-detail-foot">
+            友達や上級者の投稿した作品を参考にしよう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">通知を確認しよう！</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <div class="item-left-img-1"></div>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            作品にタイトルを付けて投稿しよう！<br>
+            投稿には細かい工程や、材料などを記述しよう！<br>
+            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+          </p>
+          <p class="item-detail-foot">
+            友達や上級者の投稿した作品を参考にしよう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">検索・並び替えしよう！</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <div class="item-left-img-1"></div>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            作品にタイトルを付けて投稿しよう！<br>
+            投稿には細かい工程や、材料などを記述しよう！<br>
+            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+          </p>
+          <p class="item-detail-foot">
+            友達や上級者の投稿した作品を参考にしよう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">商品検索しよう!</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <div class="item-left-img-1"></div>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            作品にタイトルを付けて投稿しよう！<br>
+            投稿には細かい工程や、材料などを記述しよう！<br>
+            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+          </p>
+          <p class="item-detail-foot">
+            友達や上級者の投稿した作品を参考にしよう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">【いいね！】【ストック!】しよう！</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <div class="item-left-img-1"></div>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            作品にタイトルを付けて投稿しよう！<br>
+            投稿には細かい工程や、材料などを記述しよう！<br>
+            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+          </p>
+          <p class="item-detail-foot">
+            友達や上級者の投稿した作品を参考にしよう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
