--- a/app/views/end_user/homes/top.html.erb
+++ b/app/views/end_user/homes/top.html.erb
@@ -70,7 +70,7 @@
     <h4 class="item-title"><span class="title-underline">友達を作ろう!</span></h4>
     <div class="item-inner-flex">
       <div class="item-inner-left">
-        <div class="fas fa-people-arrows top-item-logo"></div>
+        <i class="fas fa-people-arrows top-item-logo"></i>
       </div>
       <div class="item-inner-right">
         <div class="inner-box">
@@ -86,60 +86,38 @@
     </div>
   </div>
   <div class="about-main_item">
-    <h4 class="item-title"><span class="title-underline">DMで交流しよう!</span></h4>
-    <div class="item-inner-flex">
-      <div class="item-inner-left">
-        <div class="item-left-img-1"></div>
-      </div>
-      <div class="item-inner-right">
-        <div class="inner-box">
-          <p class="item-detail">
-            作品にタイトルを付けて投稿しよう！<br>
-            投稿には細かい工程や、材料などを記述しよう！<br>
-            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
-          </p>
-          <p class="item-detail-foot">
-            友達や上級者の投稿した作品を参考にしよう！
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="about-main_item">
     <h4 class="item-title"><span class="title-underline">怪しいユーザーがいたら...</span></h4>
     <div class="item-inner-flex">
       <div class="item-inner-left">
-        <div class="item-left-img-1"></div>
+        <i class="fas fa-ban top-item-logo"></i>
       </div>
       <div class="item-inner-right">
         <div class="inner-box">
           <p class="item-detail">
-            作品にタイトルを付けて投稿しよう！<br>
-            投稿には細かい工程や、材料などを記述しよう！<br>
-            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+            しつこいユーザーや、投稿を荒らしてるユーザーはブロックしよう！<br>
+            過去のDM履歴や通知も削除されるので安心！
           </p>
           <p class="item-detail-foot">
-            友達や上級者の投稿した作品を参考にしよう！
+            ブロックしなくても、「お問合せ」から運営に連絡しよう！
           </p>
         </div>
       </div>
     </div>
   </div>
   <div class="about-main_item">
-    <h4 class="item-title"><span class="title-underline">通知を確認しよう！</span></h4>
+    <h4 class="item-title"><span class="title-underline">DMで交流しよう!</span></h4>
     <div class="item-inner-flex">
       <div class="item-inner-left">
-        <div class="item-left-img-1"></div>
+        <div class="item-left-img-4"></div>
       </div>
       <div class="item-inner-right">
         <div class="inner-box">
           <p class="item-detail">
-            作品にタイトルを付けて投稿しよう！<br>
-            投稿には細かい工程や、材料などを記述しよう！<br>
-            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+            気になる人にDMを送ろう！<br>
+            相手の気持ちを考えて送る内容を考えよう！
           </p>
           <p class="item-detail-foot">
-            友達や上級者の投稿した作品を参考にしよう！
+            DMが来たら時間のある時に返信しよう！
           </p>
         </div>
       </div>
@@ -149,17 +127,35 @@
     <h4 class="item-title"><span class="title-underline">検索・並び替えしよう！</span></h4>
     <div class="item-inner-flex">
       <div class="item-inner-left">
-        <div class="item-left-img-1"></div>
+        <div class="item-left-img-5"></div>
       </div>
       <div class="item-inner-right">
         <div class="inner-box">
           <p class="item-detail">
-            作品にタイトルを付けて投稿しよう！<br>
-            投稿には細かい工程や、材料などを記述しよう！<br>
-            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+            豊富な検索、並び替え機能を使いこなして投稿を絞り込もう！<br>
+            ユーザーの検索、並び替えもできる！
           </p>
           <p class="item-detail-foot">
-            友達や上級者の投稿した作品を参考にしよう！
+            絞り込んだ投稿の作品を参考にしよう！
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="about-main_item">
+    <h4 class="item-title"><span class="title-underline">通知を確認しよう！</span></h4>
+    <div class="item-inner-flex">
+      <div class="item-inner-left">
+        <i class="far fa-bell top-item-logo"></i>
+        <i class="fas fa-circle top-notice-circle"></i>
+      </div>
+      <div class="item-inner-right">
+        <div class="inner-box">
+          <p class="item-detail">
+            通知は【DM】【いいね！】【コメント】【フォロー】で送信される！<br>
+          </p>
+          <p class="item-detail-foot">
+            未読通知が10件を超えたらお知らせメールが届くよ！
           </p>
         </div>
       </div>
@@ -169,17 +165,14 @@
     <h4 class="item-title"><span class="title-underline">商品検索しよう!</span></h4>
     <div class="item-inner-flex">
       <div class="item-inner-left">
-        <div class="item-left-img-1"></div>
+        <div class="item-left-img-7"></div>
       </div>
       <div class="item-inner-right">
         <div class="inner-box">
           <p class="item-detail">
-            作品にタイトルを付けて投稿しよう！<br>
-            投稿には細かい工程や、材料などを記述しよう！<br>
-            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
-          </p>
-          <p class="item-detail-foot">
-            友達や上級者の投稿した作品を参考にしよう！
+            楽天商品検索をつくログのアプリ内で利用できる！<br>
+            DIYで使う道具や材料を探そう！<br>
+            気になる商品はワンクリックで楽天市場に遷移できる！<br>
           </p>
         </div>
       </div>
@@ -189,17 +182,16 @@
     <h4 class="item-title"><span class="title-underline">【いいね！】【ストック!】しよう！</span></h4>
     <div class="item-inner-flex">
       <div class="item-inner-left">
-        <div class="item-left-img-1"></div>
+        <div class="item-left-img-8"></div>
       </div>
       <div class="item-inner-right">
         <div class="inner-box">
           <p class="item-detail">
-            作品にタイトルを付けて投稿しよう！<br>
-            投稿には細かい工程や、材料などを記述しよう！<br>
-            工程ごとに画像を載せて難しい作業も相手に伝わりやすくしよう！！
+            参考になった投稿、「すごい！」と思った投稿には気軽にいいねしよう！<br>
+            ストックした投稿はマイページから閲覧できる！
           </p>
           <p class="item-detail-foot">
-            友達や上級者の投稿した作品を参考にしよう！
+            投稿にいいねをもらってモチベーションを高めよう！
           </p>
         </div>
       </div>
