--- a/app/views/end_user/contacts/_contact.html.erb
+++ b/app/views/end_user/contacts/_contact.html.erb
@@ -1,4 +1,4 @@
-<button type="button" id="contact-button" class="">
+<button type="button" id="contact-button" class="user-name_style">
   お問合せ
 </button>
 
