--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -15,7 +15,7 @@
                 <%= image_tag "sample.jpg", size: '50x50', class: "post_user_image" %>
               <% end %>
           </span>
-          <span><%= public_post.end_user.name %></span>
+          <span class="user-name_style"><%= public_post.end_user.name %></span>
             <% end %>
         </div>
         <div class="content_image">
