--- a/app/views/end_user/relationships/_request_follow.html.erb
+++ b/app/views/end_user/relationships/_request_follow.html.erb
@@ -1,4 +1,4 @@
-<button type="button" id="request-button" class="request-follow-btn">
+<button type="button" id="request-button" class="request-follow-btn user-name_style">
   フォロー申請一覧
 </button>
 
