--- a/app/views/end_user/end_users/_mutual_follow.html.erb
+++ b/app/views/end_user/end_users/_mutual_follow.html.erb
@@ -18,7 +18,7 @@
         </td>
         <td style="vertical-align: middle;">
           <%= link_to end_user_path(mutual_follow), 'data-turbolinks': false do %>
-            <h5><%= mutual_follow.name %></h5>
+            <h5 class="user-name_style"><%= mutual_follow.name %></h5>
           <% end %>
         </td>
         <td style="vertical-align: middle;">
